finished popup. new issue with spacing in products section.

--- a/CSS/onhover_line.css
+++ b/CSS/onhover_line.css
@@ -26,6 +26,7 @@
 			input[type='checkbox'] {
 				display: none;
 			}
+
 			#check_one,
 			#check_two,
 			#check_three,
@@ -40,10 +41,36 @@
 			#check_twelve,
 			#check_thirteen {
 				width: 100%;
+				height: 80%;
+				position: relative;
+				top:-500px;
+				/* padding-bottom: 10%; */
+				left:-1%;
+				right:1%;
+				z-index: 99;
+			}
+			.popup_one #check_one_additional {
+				width: 100%;
 				height: 100%;
+				position: relative;
+				top:-500px;
+				/* padding-bottom: 10%; */
+				left:-1%;
+				right:1%;
+			}
+			.popup_one_additional #check_one_additional {
+				width: 100%;
+				height: 100%;
+				position: absolute;
+				top:-2%;
+				bottom:0;
+				left:-1%;
+				right:1%;
+				z-index: 100;
 			}
 
-			.popup_one,
+			.popup_one_parent,
+			/* .popup_one, */
 			.popup_two,
 			.popup_three,
 			.popup_four,
@@ -62,15 +89,39 @@
 				color: white;
 				position: fixed;
 				text-align: center;
-				/* top: 10%; */
-				/* bottom: 0; */
-				/* right: 10%;
-				left: 10%; */
-				margin: 0 auto;
-				z-index: 100;
-				/* border: solid yellow; */
+				top: 10%;
+				padding-left:1%;
+				padding-right: 1%;
+				/* font-size: 1em; */
+				z-index: 97;
 			}
+
+			.popup_one {
+				width: 100%;
+				height: 100%;
+				color: white;
+				position: fixed;
+				text-align: center;
+				font-style: normal !important;
+				font-size: 14px !important;
+				z-index: 97;
+			}
+
+			.popup_one_additional {
+				display: none;
+				width: 100%;
+				height: 100%;
+				color: white;
+				position: absolute;
+				text-align: center;
+				/* top: 10%;
+				padding-left:2%;
+				padding-right: 2%; */
+				z-index: 98;
+			}
+
 			.popup_one h1,
+			.popup_one_additional h1,
 			.popup_two h1,
 			.popup_three h1,
 			.popup_four h1,
@@ -86,11 +137,10 @@
 				display:table-cell;
 				vertical-align:middle;
 				position:relative;
-				top: 20%;
-				border: solid red;
 			}
 
 			.popup_one p,
+			.popup_one_additional p,
 			.popup_two p,
 			.popup_three p,
 			.popup_four p,
@@ -106,11 +156,9 @@
 				display:table-cell;
 				vertical-align:middle;
 				position:relative;
-				top: 20%;
-				border: solid red;
 			}
 
-			#check_one_input:checked ~ .popup_one,
+			#check_one_input:checked ~ .popup_one_parent,
 			#check_two_input:checked ~ .popup_two,
 			#check_three_input:checked ~ .popup_three,
 			#check_four_input:checked ~ .popup_four,
@@ -123,13 +171,14 @@
 			#check_eleven_input:checked ~ .popup_eleven,
 			#check_twelve_input:checked ~ .popup_twelve,
 			#check_thirteen_input:checked ~ .popup_thirteen,
-			input:checked ~ .mask {
+			input:checked ~ .mask,
+			#check_one_input_additional:checked ~ .popup_one_additional {
 				display: block;
 			}
 
-			/* #check_one_input:checked ~ .mask {
-				display: block;
-			} */
+			#check_one_input_additional:checked ~ .popup_one {
+				display: none;
+			}
 
 			.item-hover,
 			.item-hover {
@@ -154,7 +203,7 @@
 				text-align: center;
 				bottom: 0;
 				margin: 0 auto;
-				z-index: 99;
+				z-index: 90;
 			}
 
 			.item-type-line .item-hover {
@@ -181,6 +230,10 @@
 
 				.item-type-line .item-info .headline {
 					/* font-size:20px; */
+				}
+
+				.popup_two .col-sm-4 {
+					border: solid red;
 				}
 
 				.item-type-line .item-info .line {
